<resources>
    <!--Name of the app. Visible under app icon in launcher as well as by default on toolbar/actionBar-->
    <string name="app_name">Android Quizzes</string>
    <!--Texts for question 1 [CHAR LIMIT = NONE]-->
    <string name="label_que_1">What is an Activity in android?</string>
    <!--Texts for answer 1 A [CHAR LIMIT = NONE]-->
    <string name="label_ans_1_a">A screen, a window with interactive UI</string>
    <!--Texts for answer 1 B [CHAR LIMIT = NONE]-->
    <string name="label_ans_1_b">Very base class in android</string>
    <!--Texts for answer 1 C [CHAR LIMIT = NONE]-->
    <string name="label_ans_1_c">Root view</string>
    <!--Texts for answer 1 D [CHAR LIMIT = NONE]-->
    <string name="label_ans_1_d">Main thread</string>
    <!--Texts for question 2 [CHAR LIMIT = NONE]-->
    <string name="label_que_2">Which one of the following is not the part of the Activity life cycle?</string>
    <!--Texts for answer 2 A [CHAR LIMIT = NONE]-->
    <string name="label_ans_2_a">onPostResume()</string>
    <!--Texts for answer 2 B [CHAR LIMIT = NONE]-->
    <string name="label_ans_2_b">onRestart()</string>
    <!--Texts for answer 2 C [CHAR LIMIT = NONE]-->
    <string name="label_ans_2_c">onActivityCreated()</string>
    <!--Texts for answer 2 D [CHAR LIMIT = NONE]-->
    <string name="label_ans_2_d">onAttachFragment()</string>
    <!--Texts for question 3 [CHAR LIMIT = NONE]-->
    <string name="label_que_3">In which android version was the fragment introduced first?</string>
    <!--Texts for answer 3 A [CHAR LIMIT = NONE]-->
    <string name="label_ans_3_a">Froyo</string>
    <!--Texts for answer 3 B [CHAR LIMIT = NONE]-->
    <string name="label_ans_3_b">Gingerbread</string>
    <!--Texts for answer 3 C [CHAR LIMIT = NONE]-->
    <string name="label_ans_3_c">Honeycomb</string>
    <!--Texts for answer 3 D [CHAR LIMIT = NONE]-->
    <string name="label_ans_3_d">Ice Cream Sandwich</string>
    <!--Texts for question 4 [CHAR LIMIT = NONE]-->
    <string name="label_que_4">Check valid android version/s</string>
    <!--Texts for answer 4 A [CHAR LIMIT = NONE]-->
    <string name="label_ans_4_a">1.5</string>
    <!--Texts for answer 4 B [CHAR LIMIT = NONE]-->
    <string name="label_ans_4_b">1.6</string>
    <!--Texts for answer 4 C [CHAR LIMIT = NONE]-->
    <string name="label_ans_4_c">3.2</string>
    <!--Texts for answer 4 D [CHAR LIMIT = NONE]-->
    <string name="label_ans_4_d">5.0</string>
    <!--Texts for question 5 [CHAR LIMIT = NONE]-->
    <string name="label_que_5">Select code name for API 7</string>
    <!--Texts for answer 5 A [CHAR LIMIT = NONE]-->
    <string name="label_ans_5_a">Donut</string>
    <!--Texts for answer 5 B [CHAR LIMIT = NONE]-->
    <string name="label_ans_5_b">Eclair</string>
    <!--Texts for answer 5 C [CHAR LIMIT = NONE]-->
    <string name="label_ans_5_c">Froyo</string>
    <!--Texts for answer 5 D [CHAR LIMIT = NONE]-->
    <string name="label_ans_5_d">Gingerbread</string>
    <!--Texts for question 6 [CHAR LIMIT = NONE]-->
    <string name="label_que_6">Select code name for 2.2.3</string>
    <!--Texts for answer 6 A [CHAR LIMIT = NONE]-->
    <string name="label_ans_6_a">Eclair</string>
    <!--Texts for answer 6 B [CHAR LIMIT = NONE]-->
    <string name="label_ans_6_b">Froyo</string>
    <!--Texts for answer 6 C [CHAR LIMIT = NONE]-->
    <string name="label_ans_6_c">Gingerbread</string>
    <!--Texts for answer 6 D [CHAR LIMIT = NONE]-->
    <string name="label_ans_6_d">Honeycomb</string>
    <!--Texts for question 7 [CHAR LIMIT = NONE]-->
    <string name="label_que_7">Can several fragments be in a running state at the same time?</string>
    <!--Texts for answer 7 A [CHAR LIMIT = NONE]-->
    <string name="label_ans_7_a">Yes</string>
    <!--Texts for answer 7 B [CHAR LIMIT = NONE]-->
    <string name="label_ans_7_b">No</string>
    <!--Texts for answer 7 C [CHAR LIMIT = NONE]-->
    <string name="label_ans_7_c">Conditional</string>
    <!--Texts for answer 7 D [CHAR LIMIT = NONE]-->
    <string name="label_ans_7_d">N/A</string>
    <!--Texts for question 8 [CHAR LIMIT = NONE]-->
    <string name="label_que_8">On which thread services work by default in android?</string>
    <!--Texts for answer 8 A [CHAR LIMIT = NONE]-->
    <string name="label_ans_8_a">Worker Thread</string>
    <!--Texts for answer 8 B [CHAR LIMIT = NONE]-->
    <string name="label_ans_8_b">Main Thread</string>
    <!--Texts for answer 8 C [CHAR LIMIT = NONE]-->
    <string name="label_ans_8_c">Own Thread</string>
    <!--Texts for answer 8 D [CHAR LIMIT = NONE]-->
    <string name="label_ans_8_d">None of the above</string>
    <!--Texts for question 9 [CHAR LIMIT = NONE]-->
    <string name="label_que_9">Enter the full form of ADB</string>
    <!--Texts for question 10 [CHAR LIMIT = NONE]-->
    <string name="label_que_10">Enter the full form of DDMS</string>
    <!--Texts for button to submit answers [CHAR LIMIT = 10]-->
    <string name="label_submit">Submit</string>
    <!--Texts to be compared for question 9 [CHAR LIMIT = NONE]-->
    <string name="str_android_device_bridge">Android Debug Bridge</string>
    <!--Texts to be compared for question 10 [CHAR LIMIT = NONE]-->
    <string name="str_ddms">Dalvik Debug Monitor Service</string>
    <!--Texts to be displayed as toast message after submitting the answers [CHAR LIMIT = NONE]-->
    <string name="msg_score">You have scored # out of 10</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerAct</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
